[package]
name = "cargo-pytest"
version = "0.1.0"
edition = "2021"
license = "BSD-3"
repository = "https://github.com/btel/cargo-pytest"
description = "Run python tests using cargo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
